--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
 language: elixir
+elixir:
+  - 1.3.0
+otp_release:
+  - 18.0
+sudo: false
+before_script:
+  - mix deps.get --only test
+script:
+  - mix test
